TypeChecking/test_cases/good/inherit-object.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits Object {
  x : Int <- 5 ;
} ;
