TypeChecking/test_cases/bad/inherit-bool.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits Bool {
  x : Int <- 5 ;
} ;
